--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Labs 02</string>
-    <string name="hello_message">Lab2 GUI</string>
-    <string name="ButtonText">click here</string>
+    <string name="app_name">Anroid Labs</string>
+    <string name="hello_message">Main Activity</string>
+    <string name="profilename">Profile Activity</string>
+    <string name="ButtonText">Log in</string>
+    <string name="probutton">Take Picture</string>
     <string name="CheckboxText">check this out</string>
     <string name="SwitchText">Switch on/off</string>
     <string name="EditTextName"> Enter name here </string>
@@ -10,4 +12,6 @@
     <string name="on">The switch in now on</string>
     <string name="off">The switch in now off</string>
     <string name="undo">Undo</string>
+    <string name="email">Enter your email</string>
+    <string name="password">Enter your password</string>
 </resources>
