--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Anroid Labs</string>
+    <string name="app_name">Anroid Labs Lab 4</string>
     <string name="hello_message">Main Activity</string>
     <string name="profilename">Profile Activity</string>
     <string name="ButtonText">Log in</string>
-    <string name="probutton">Take Picture</string>
+    <string name="probutton">Save Data</string>
+    <string name="clear">Clear Data</string>
     <string name="CheckboxText">check this out</string>
     <string name="SwitchText">Switch on/off</string>
     <string name="EditTextName"> Enter name here </string>
@@ -15,4 +16,5 @@
     <string name="undo">Undo</string>
     <string name="email">Enter your email</string>
     <string name="password">Enter your password</string>
+    <string name="address">Enater your address</string>
 </resources>
